@@ -48,7 +48,9 @@ struct eapol_auth_config {
 	char *eap_req_id_text; /* a copy of this will be allocated */
 	size_t eap_req_id_text_len;
 	u8 *pac_opaque_encr_key;
-	char *eap_fast_a_id;
+	u8 *eap_fast_a_id;
+	size_t eap_fast_a_id_len;
+	char *eap_fast_a_id_info;
 	int eap_fast_prov;
 	int pac_key_lifetime;
 	int pac_key_refresh_time;
